--- a/hw05/index.html
+++ b/hw05/index.html
@@ -10,5 +10,5 @@
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="index.js"></script>
 </body>
-1395/2472 allotted Republican delegates
-1946/4763 allotted Democratic delegates
+<!--1395/2472 allotted Republican delegates
+1946/4763 allotted Democratic delegates-->
