transition to dem party

--- a/hw05/index.html
+++ b/hw05/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE HTML>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
+  <p style="text-align: left; font-size:12px;">HW05 by Amanda Chiu</p>
+<center>
+  <h2>Republican Party</h2>
+  <p><i>1395 of 2472 Republican delegates allotted</i></p>
+  <img src="republicanlogo.png" height="75px">
+  <br><br><button id="other">See Democratic Party</button><br>
+</center>
 
-<h2>Republican Party</h2>
-<div class="republican"></div>
+<br>
+<div class="container" style="width: 100%; display: table;">
+  <div style="display: table-row">
+    <div class="names" style="width: 600px; display: table-cell;"></div>
+    <div class="republican" style="display: table-cell;"></div>
+  </div>
+</div>
 
 <div class="democrat"></div>
 
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="index.js"></script>
 </body>
-<!--1395/2472 allotted Republican delegates
+<!--
 1946/4763 allotted Democratic delegates-->
